--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+
+flutter_intl:
+  enabled: true
 
 
   # The following adds the Cupertino Icons font to your application.
