--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  syncfusion_flutter_calendar: ^18.4.49
+  syncfusion_localizations: ^18.4.49
 
 flutter_intl:
   enabled: true
