--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ flutter:
     - assets/calendar-event-fill.png
     - assets/calendar-x-fill.png
     - assets/calendar2-check-fill.png
+    - assets/lung.png
+    - assets/heart.png
+    - assets/medic.png
+    - assets/sick_boy.png
 
   fonts:
     - family: fontIcons
