--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
     - assets/calendar-event-fill.png
     - assets/calendar-x-fill.png
     - assets/calendar2-check-fill.png
+    - assets/graph.png
 
   fonts:
     - family: fontIcons
