finission ajout symptomes, reste la selection de la durée du symptome et barre saisie pour 'détails'

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - assets/heart.png
     - assets/medic.png
     - assets/sick_boy.png
+    - assets/cross.png
 
   fonts:
     - family: fontIcons
